--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,6 +1,6 @@
 - variation =  @article.article_variations.where(variation_type: @ab_test)
+- action_button_text = variation.present? ? variation.first.action_button_text : 'Click me'
 
-<!-- This example requires Tailwind CSS v2.0+ -->
 .relative.bg-white.overflow-hidden
   .max-w-7xl.mx-auto
     .relative.z-10.pb-8.bg-white{ class: "sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32" }
@@ -18,8 +18,7 @@
 
           %div{ class: "mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start" }
             %div{ class: "rounded-md shadow" }
-              - if variation.present?
-                = link_to variation.first.action_button_text, :perform_action, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10"
+              = link_to action_button_text, :perform_action, class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10"
 
             %div{ class: "mt-3 sm:mt-0 sm:ml-3" }
               = link_to 'Live demo', '#', class: "w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10"
